--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,35 +1,39 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.UniPay" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.UniPay" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/primary_500</item>
+        <item name="colorPrimaryVariant">@color/primary_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/primary_200</item>
+        <item name="colorSecondaryVariant">@color/primary_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
+        <item name="android:windowBackground">@color/dim_white</item>
         <!-- Customize your theme here. -->
     </style>
 
 
     <style name="MyCustomTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorAccent">@color/purple_500</item>
-        <item name="OTPButtonStyle">@color/purple_500</item>
-        <item name="PayButtonStyle">@color/purple_500</item>
+        <item name="colorPrimary">@color/primary_500</item>
+        <item name="colorPrimaryDark">@color/primary_700</item>
+        <item name="colorSecondaryVariant">@color/primary_200</item>
+        <item name="colorSecondary">@color/primary_200</item>
+        <item name="colorAccent">@color/primary_500</item>
+        <item name="OTPButtonStyle">@color/primary_500</item>
+        <item name="PayButtonStyle">@color/primary_500</item>
         <item name="OTPHeaderStyle">@style/otpHeaderStyle</item>
-        <item name="PinButtonStyle">@color/purple_500</item>
+        <item name="PinButtonStyle">@color/primary_500</item>
         <item name="PinHeaderStyle">@style/myotpHeaderStyle</item>
         <item name="PaymentTileTextStyle">@style/TextAppearance.AppCompat.Headline</item>
     </style>
 
     <style name="myotpHeaderStyle">
-        <item name="android:background">@color/purple_500</item>
+        <item name="android:background">@color/primary_500</item>
     </style>
+
+
 </resources>
