--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
     </style>
 
 
-    <style name="MyCustomTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+   <!-- <style name="MyCustomTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/primary_500</item>
         <item name="colorPrimaryDark">@color/primary_700</item>
         <item name="colorSecondaryVariant">@color/primary_200</item>
@@ -33,7 +33,17 @@
 
     <style name="myotpHeaderStyle">
         <item name="android:background">@color/primary_500</item>
+    </style>-->
+
+
+    <style name="AppBottomSheetDialogTheme" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/AppModalStyle</item>
+        <item name="colorSecondary">@color/primary_500</item>
+        <item name="colorPrimary">@color/primary_500</item>
     </style>
 
+    <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/rounded_top</item>
+    </style>
 
 </resources>
