--- a/app/src/main/res/layout/payment_item.xml
+++ b/app/src/main/res/layout/payment_item.xml
@@ -29,7 +29,6 @@
                 app:tint="?colorPrimary" />
         </androidx.cardview.widget.CardView>
 
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -60,16 +59,16 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingEnd="5dp"
-            android:text="Time"
+            android:text="@string/app_name"
             android:textSize="11sp" />
 
         <ImageView
             android:id="@+id/imageViewEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?selectableItemBackgroundBorderless"
             android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
             app:tint="?colorPrimary" />
     </LinearLayout>
-
 
 </androidx.cardview.widget.CardView>
