--- a/app/src/main/res/layout/rec_view.xml
+++ b/app/src/main/res/layout/rec_view.xml
@@ -6,9 +6,9 @@
 
     <ProgressBar
         android:id="@+id/progBar"
-        android:layout_width="wrap_content"
+        android:layout_width="30dp"
         android:indeterminateTint="@color/primary_500"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
