--- a/app/src/main/res/layout/student_dashboard.xml
+++ b/app/src/main/res/layout/student_dashboard.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,28 +17,96 @@
             android:background="@drawable/rounded_all"
             android:backgroundTint="@color/primary_500"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="15dp">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:text="Student Name"
-                android:textColor="@color/white" />
+                android:layout_marginBottom="10dp"
+                android:gravity="center">
 
-            <TextView
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/ic_outline_person_outline_24"
+                    app:tint="@color/white" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Name"
+                        android:textColor="@color/white"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/tvName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="-"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_edit_24"
+                    app:tint="@color/white" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:text="Reg No"
-                android:textColor="@color/white" />
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/ic_outline_how_to_reg_24"
+                    app:tint="@color/white" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Registration Number"
+                        android:textColor="@color/white"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/tvReg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="-"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:animateLayoutChanges="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -56,15 +123,11 @@
                     android:layout_marginBottom="5dp"
                     android:text="Financials"
                     android:textColor="@color/primary_500"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recView1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:itemCount="3"
-                    tools:listitem="@layout/dashboard_item" />
+                <include
+                    android:id="@+id/v1"
+                    layout="@layout/rec_view" />
 
 
             </LinearLayout>
@@ -87,15 +150,11 @@
                     android:layout_marginBottom="5dp"
                     android:text="Student Details"
                     android:textColor="@color/primary_500"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recView2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:itemCount="3"
-                    tools:listitem="@layout/dashboard_item" />
+                <include
+                    android:id="@+id/v2"
+                    layout="@layout/rec_view" />
 
             </LinearLayout>
 
@@ -107,23 +166,25 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/rounded_all"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="15dp">
 
             <com.google.android.material.button.MaterialButton
-                style="@style/IconButtonStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 android:onClick="openPay"
-                android:text="PAY"
+                android:text="PAY TUITION"
+                android:textSize="13sp"
+                android:theme="@style/IconButtonStyle"
                 app:icon="@drawable/ic_baseline_attach_money_24" />
 
             <com.google.android.material.button.MaterialButton
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:onClick="openTransactions"
                 android:text="View Transactions"
                 android:textAllCaps="true"
+                android:textSize="13sp"
                 android:theme="@style/IconButtonStyle"
                 app:icon="@drawable/ic_outline_library_books_24" />
 
