--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -72,6 +72,7 @@
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:onClick="openBankCard"
             android:text="Bank Card"
             android:textAllCaps="false"
             app:icon="@drawable/ic_baseline_credit_card_24"
