--- a/app/src/main/res/layout/reports_dialog.xml
+++ b/app/src/main/res/layout/reports_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginHorizontal="10dp"
@@ -14,6 +13,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
@@ -30,22 +30,22 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
+            android:layout_weight="1"
             android:text="@string/app_name"
             android:textColor="@color/primary_500"
             android:textSize="20sp"
             android:textStyle="bold" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/printBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="110sp"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
             android:text="Print"
-            android:textSize="10sp"
-            tools:ignore="SmallSp" />
+            android:textSize="10sp" />
 
     </LinearLayout>
 
