--- a/app/src/main/res/layout/student_details.xml
+++ b/app/src/main/res/layout/student_details.xml
@@ -110,8 +110,8 @@
         android:id="@+id/v1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
